{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 91,
  "lineage": "f3c1727f-f132-c7cb-c2f6-b38a592757a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:677276109057:instance/i-0300abf2c520f7902",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0300abf2c520f7902",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-ci-cd-key-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f694df39d89d5821",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-18-232-178-199.compute-1.amazonaws.com",
            "public_ip": "18.232.178.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "CostCenter": "DevOps",
                  "Environment": "Production",
                  "Project": "CI/CD Pipeline",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0f24378e99979d134",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0749aed70129fb980",
            "tags": {
              "Name": "Ansible-Controller"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "Ansible-Controller",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0963b038443a76e37"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.ansible_sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:677276109057:instance/i-06cf11a234cdac7da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cf11a234cdac7da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-ci-cd-key-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dba17304dddfa312",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-44-192-7-18.compute-1.amazonaws.com",
            "public_ip": "44.192.7.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "CostCenter": "DevOps",
                  "Environment": "Production",
                  "Project": "CI/CD Pipeline",
                  "Terraform": "true"
                },
                "tags_all": {
                  "CostCenter": "DevOps",
                  "Environment": "Production",
                  "Project": "CI/CD Pipeline",
                  "Terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-08e77dad453a32fa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0749aed70129fb980",
            "tags": {
              "Name": "Jenkins-Agent-1"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "Jenkins-Agent-1",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2fc8e38e0f80f3f"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.jenkins_agent_sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:677276109057:instance/i-0497a8edba9b97dd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0497a8edba9b97dd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-ci-cd-key-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf63f68a59f0c706",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-3-228-218-49.compute-1.amazonaws.com",
            "public_ip": "3.228.218.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "CostCenter": "DevOps",
                  "Environment": "Production",
                  "Project": "CI/CD Pipeline",
                  "Terraform": "true"
                },
                "tags_all": {
                  "CostCenter": "DevOps",
                  "Environment": "Production",
                  "Project": "CI/CD Pipeline",
                  "Terraform": "true"
                },
                "throughput": 0,
                "volume_id": "vol-03336477fb815e6d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0749aed70129fb980",
            "tags": {
              "Name": "Jenkins-Agent-2"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "Jenkins-Agent-2",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2fc8e38e0f80f3f"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.jenkins_agent_sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:677276109057:instance/i-0145b2714322ca498",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-master-profile",
            "id": "i-0145b2714322ca498",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-ci-cd-key-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b9d9c2adc51ef1c",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "public_dns": "ec2-98-81-112-18.compute-1.amazonaws.com",
            "public_ip": "98.81.112.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "CostCenter": "DevOps",
                  "Environment": "Production",
                  "Project": "CI/CD Pipeline",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-024eb6362dd8e6d45",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0749aed70129fb980",
            "tags": {
              "Name": "Jenkins-Master"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "Jenkins-Master",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0617b5778ad23e974"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_master",
            "aws_iam_role.jenkins_master",
            "aws_key_pair.generated_key",
            "aws_security_group.ansible_sg",
            "aws_security_group.jenkins_master_sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:security-group/sg-0963b038443a76e37",
            "description": "Ansible Controller security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0963b038443a76e37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from trusted IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-controller-sg",
            "name_prefix": "",
            "owner_id": "677276109057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "Ansible-Controller"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Project": "CI/CD Pipeline",
              "Role": "Ansible-Controller",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:security-group/sg-0f2fc8e38e0f80f3f",
            "description": "Jenkins Agent security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2fc8e38e0f80f3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Controller \u0026 Master",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Agent Communication",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              }
            ],
            "name": "jenkins-agent-sg",
            "name_prefix": "",
            "owner_id": "677276109057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "Jenkins-Agent"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Project": "CI/CD Pipeline",
              "Role": "Jenkins-Agent",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:security-group/sg-0617b5778ad23e974",
            "description": "Jenkins Master security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0617b5778ad23e974",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web Interface",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "JNLP Agent Communication",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Ansible Controller",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0963b038443a76e37"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "677276109057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "Jenkins-Master"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Project": "CI/CD Pipeline",
              "Role": "Jenkins-Master",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ansible_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:network-acl/acl-0dd8ce133f985a215",
            "default_network_acl_id": "acl-0dd8ce133f985a215",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dd8ce133f985a215",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "677276109057",
            "subnet_ids": [
              "subnet-0041ec41d366a47dd",
              "subnet-062f5d53c16f01e1c",
              "subnet-0749aed70129fb980",
              "subnet-09d96f52bf15ea78b",
              "subnet-0c62d5c85cbf3fc25",
              "subnet-0fc817cdaf4a19436"
            ],
            "tags": {
              "Name": "jenkins-vpc-default"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-default",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:route-table/rtb-034b7028743526ccc",
            "default_route_table_id": "rtb-034b7028743526ccc",
            "id": "rtb-034b7028743526ccc",
            "owner_id": "677276109057",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-vpc-default"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-default",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:security-group/sg-0fdcb7086b2e3eaa0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fdcb7086b2e3eaa0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "677276109057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-vpc-default"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-default",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061ff1478603ccd3e",
            "arn": "arn:aws:ec2:us-east-1:677276109057:elastic-ip/eipalloc-061ff1478603ccd3e",
            "association_id": "eipassoc-071e689f1cd04f8cc",
            "domain": "vpc",
            "id": "eipalloc-061ff1478603ccd3e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a6251ab78338b81d",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-52-0-86-96.compute-1.amazonaws.com",
            "public_ip": "52.0.86.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-vpc-us-east-1a"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-us-east-1a",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6225847de0e2d86",
            "arn": "arn:aws:ec2:us-east-1:677276109057:elastic-ip/eipalloc-0a6225847de0e2d86",
            "association_id": "eipassoc-01772b69728567e52",
            "domain": "vpc",
            "id": "eipalloc-0a6225847de0e2d86",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05ed0e148a71bf79b",
            "private_dns": "ip-10-0-2-27.ec2.internal",
            "private_ip": "10.0.2.27",
            "public_dns": "ec2-44-219-148-173.compute-1.amazonaws.com",
            "public_ip": "44.219.148.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-vpc-us-east-1b"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-us-east-1b",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:internet-gateway/igw-01597de31bf3ca5ab",
            "id": "igw-01597de31bf3ca5ab",
            "owner_id": "677276109057",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061ff1478603ccd3e",
            "association_id": "eipassoc-071e689f1cd04f8cc",
            "connectivity_type": "public",
            "id": "nat-06fcfc2103e063842",
            "network_interface_id": "eni-0a6251ab78338b81d",
            "private_ip": "10.0.1.182",
            "public_ip": "52.0.86.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0749aed70129fb980",
            "tags": {
              "Name": "jenkins-vpc-us-east-1a"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-us-east-1a",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6225847de0e2d86",
            "association_id": "eipassoc-01772b69728567e52",
            "connectivity_type": "public",
            "id": "nat-04a0c1679089c2a3e",
            "network_interface_id": "eni-05ed0e148a71bf79b",
            "private_ip": "10.0.2.27",
            "public_ip": "44.219.148.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d96f52bf15ea78b",
            "tags": {
              "Name": "jenkins-vpc-us-east-1b"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-us-east-1b",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07141eb578dccc0df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06fcfc2103e063842",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07141eb578dccc0df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a735d308662b75ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04a0c1679089c2a3e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a735d308662b75ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01597de31bf3ca5ab",
            "id": "r-rtb-0f16140ba86b792121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f16140ba86b79212",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:route-table/rtb-07141eb578dccc0df",
            "id": "rtb-07141eb578dccc0df",
            "owner_id": "677276109057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fcfc2103e063842",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-private-us-east-1a"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-private-us-east-1a",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:route-table/rtb-0a735d308662b75ef",
            "id": "rtb-0a735d308662b75ef",
            "owner_id": "677276109057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a0c1679089c2a3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-private-us-east-1b"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-private-us-east-1b",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:route-table/rtb-0f16140ba86b79212",
            "id": "rtb-0f16140ba86b79212",
            "owner_id": "677276109057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01597de31bf3ca5ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-public"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-public",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ee41c630c3e442",
            "route_table_id": "rtb-07141eb578dccc0df",
            "subnet_id": "subnet-0fc817cdaf4a19436"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017fdcd6e1c3c2022",
            "route_table_id": "rtb-0a735d308662b75ef",
            "subnet_id": "subnet-0041ec41d366a47dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cda275ba4ef9cdc2",
            "route_table_id": "rtb-07141eb578dccc0df",
            "subnet_id": "subnet-0c62d5c85cbf3fc25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4d5f8d2a88b51d4",
            "route_table_id": "rtb-0a735d308662b75ef",
            "subnet_id": "subnet-062f5d53c16f01e1c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f11792bf8dafa3",
            "route_table_id": "rtb-0f16140ba86b79212",
            "subnet_id": "subnet-0749aed70129fb980"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c883723482cf5d4",
            "route_table_id": "rtb-0f16140ba86b79212",
            "subnet_id": "subnet-09d96f52bf15ea78b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:subnet/subnet-0fc817cdaf4a19436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc817cdaf4a19436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276109057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-db-us-east-1a"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-db-us-east-1a",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:subnet/subnet-0041ec41d366a47dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0041ec41d366a47dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276109057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-db-us-east-1b"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-db-us-east-1b",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:subnet/subnet-0c62d5c85cbf3fc25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c62d5c85cbf3fc25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276109057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-private-us-east-1a",
              "NetworkTier": "Private"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-private-us-east-1a",
              "NetworkTier": "Private",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:subnet/subnet-062f5d53c16f01e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062f5d53c16f01e1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276109057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-private-us-east-1b",
              "NetworkTier": "Private"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-private-us-east-1b",
              "NetworkTier": "Private",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:subnet/subnet-0749aed70129fb980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0749aed70129fb980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276109057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-public-us-east-1a",
              "NetworkTier": "Public"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-public-us-east-1a",
              "NetworkTier": "Public",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:subnet/subnet-09d96f52bf15ea78b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d96f52bf15ea78b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "677276109057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-public-us-east-1b",
              "NetworkTier": "Public"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc-public-us-east-1b",
              "NetworkTier": "Public",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00a5791a6a2f92c0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677276109057:vpc/vpc-00a5791a6a2f92c0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd8ce133f985a215",
            "default_route_table_id": "rtb-034b7028743526ccc",
            "default_security_group_id": "sg-0fdcb7086b2e3eaa0",
            "dhcp_options_id": "dopt-0092bec4335c0e3f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a5791a6a2f92c0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034b7028743526ccc",
            "owner_id": "677276109057",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "CostCenter": "DevOps",
              "Environment": "Production",
              "Name": "jenkins-vpc",
              "Project": "CI/CD Pipeline",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}